--- a/pages/components/Navbar/navbar.module.css
+++ b/pages/components/Navbar/navbar.module.css
@@ -6,7 +6,10 @@
     align-items: center;
     justify-content: flex-start;
     padding: 0 5%;
-    background-color:rgba(255, 251, 251, 0.9);;
+    background-color:rgba(255, 251, 251, 0.9);
+    position: fixed;
+    top: 0;
+    z-index: 999;
   }
 
   .NavLeft{
