--- a/styles/App.module.css
+++ b/styles/App.module.css
@@ -3,22 +3,13 @@
 
 
 .container {
+  margin-top: 13vh;
+  width: 100vw;
+  height: auto;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   
   
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
-}
 
