--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,4 +3,35 @@
     height: 300px;
 }
 
+.imgContainer{
+    position: relative;
+    width: 100vw;
+    height: 400px;
+    background-color: black;
 
+
+}
+
+.darkEffect{
+    width: 100%;
+    height: 100%;
+    z-index: 400;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.308);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10%;
+}
+
+.darkEffect h1{
+    margin-top: -5%;
+    margin-bottom: 3%;
+}
+
+.darkEffect h3{
+    font-weight: normal;
+}
