--- a/pages/components/Navbar/navbar.module.css
+++ b/pages/components/Navbar/navbar.module.css
@@ -12,7 +12,7 @@
     z-index: 999;
   }
 
-  .NavLeft{
+  .navLeft{
     width: 30%;
     height: 100%;
     display: flex;
@@ -55,3 +55,12 @@
     margin-right: 25px ;
     cursor: pointer;
   }
+
+  .navSearch{
+    width: 250px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
