--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -2,13 +2,15 @@
 .footer{
     width: 100vw;
     height: 50vh;
-    background-image: url(../public/backgroundFooter.svg);
+    background-image: url(/backgroundFooter.svg);
     background-color: #007cba4d;
     display: flex;
     color: white;
     flex-direction: column;
     gap: 20px;
     padding: 10px;
+    bottom: 0;
+    left: 0;
 }
 
 .footerKiri{
