--- a/components/HomeCard1/HomeCard1.css
+++ b/components/HomeCard1/HomeCard1.css
@@ -82,3 +82,42 @@
     margin-left: 17%;
     margin-right: -42%;
 }
+
+@media only screen and (max-width: 500px){
+    .aboutCard{
+        margin-left: 5%;
+        width: 90vw;
+        height: auto;
+        min-height: 80vh;
+    }
+    .cardLeft{
+        width: 100%;
+        height: 40vh;
+    }
+    .cardRight{
+        width: 100%;
+        height: auto;
+        justify-content: flex-start;
+    }
+    .cardLeft img{
+        border-radius: 15px 15px 0 0;
+    }
+    .decorationCard1{
+    box-shadow: inset 2.5vw 0 0 #D12635;
+    }
+    .blueDecoration{
+        display: none;
+    }
+
+    .cardRight h1{
+        font-size: 16pt;
+    }
+
+    .cardRight p{
+        font-size: 11pt;
+    }
+
+    .cardBottom{
+        margin-top: 15px;
+    }
+}
