--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -1,4 +1,8 @@
-
+.home{
+    width: 100vw;
+    height: auto;
+    min-height: 100vh;
+}
 
 .aboutServiceArea{
     width: 100vw;
@@ -10,86 +14,6 @@
 }
 
 
-
-
-
-
-
-.imgContainer{
-    width: 100vw;
-    height: 300px;
-}
-
-
-
-
-
-
-
-.imgContainer{
-    position: relative;
-    width: 100vw;
-    height: 400px;
-    background-color: black;
-}
-
-.darkEffect{
-    width: 100%;
-    height: 100%;
-    z-index: 400;
-    position: absolute;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.308);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 10%;
-}
-
-.darkEffect h1{
-    margin-top: -5%;
-    margin-bottom: 3%;
-}
-
-.darkEffect h3{
-    font-weight: normal;
-}
-
-.businessPartners{
-    width: 100%;
-    height: auto;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    box-shadow: inset 1.5vw 0 0 #D12635;
-}
-
-.businessPartners h1 {
-    text-align: center;
-    margin-top: 50px;
-
-}
-
-.imgContainerBusiness{
-    width: 100vw;
-    height: auto;
-    display: flex;
-}
-
-.imgContainerBottom{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 10%;
-}
-
-.forMarginBottomHome{
-    margin-bottom: 50px;
-}
 
 
 
