--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -6,10 +6,29 @@
     align-items: center;
     justify-content: flex-start;
     padding-left: 5%;
-    background-color:rgba(255, 251, 251, 0.9);
+    background-color:rgba(255, 251, 251);
     position: fixed;
     top: 0;
     z-index: 999;
+  }
+
+  .modalNav{
+    width: 100vw;
+    height: 50vh;
+    background-color:rgba(255, 251, 251, 1);
+    position: fixed;
+    top: 12.9vh;
+    z-index: 998;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .modalNav h3{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .imgGroups{
