--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -1,66 +1,3 @@
-.project{
-  width: 100vw;
-  height: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.imgProject{
-  width: 100vw;
-  height: 60vh;
-  position: relative;
-} 
-
-.imgProject img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-position: center;
-}
-
-.judulProject{
-  width: 100%;
-  height: 100%;
-  z-index: 400;
-  position: absolute;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.308);
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 10%;
-}
-
-.containerOurProject{
-  width: 100vw;
-  height: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  box-shadow: inset 1.5vw 0 0 #D12635;
-}
-
-
-.imgContainer{
-  width: 100vw;
-  height: 300px;
-}
-
-.titleHeader{
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  font-size: 1.75rem;
-}
-
-.containerCard{
-  display: flex;
-  flex-direction: column;
-}
 
 .cardContent{
   margin-left: 5vh;
@@ -116,7 +53,7 @@
 
 .cardRight h1{
   font-size: 1.5rem;
-  text-align: center;
+  text-align: start;
 
 }
 
