--- a/components/HomeCard1/HomeCard1.css
+++ b/components/HomeCard1/HomeCard1.css
@@ -88,16 +88,17 @@
         margin-left: 5%;
         width: 90vw;
         height: auto;
-        min-height: 80vh;
     }
     .cardLeft{
         width: 100%;
-        height: 40vh;
+        height: 250px;
     }
     .cardRight{
         width: 100%;
         height: auto;
         justify-content: flex-start;
+        padding: 0 5%;
+
     }
     .cardLeft img{
         border-radius: 15px 15px 0 0;
@@ -111,10 +112,61 @@
 
     .cardRight h1{
         font-size: 16pt;
+        padding: 10px 0;
     }
 
     .cardRight p{
         font-size: 11pt;
+    }
+
+    .cardBottom{
+        margin: 30px 0;
+    }
+
+    .buletCardUtama{
+        width: 20px;
+        height: 8px;
+
+    }
+    
+    .buletCard{
+        width: 8px;
+        height: 8px;
+        border-radius: 90px;
+        background-color: #D12635;
+    }
+}
+
+@media only screen and (min-width : 501px) and (max-width: 800px){
+    .aboutCard{
+        height: 650px;
+        flex-direction: column;
+    }
+    .cardLeft{
+        width: 100%;
+        height: 50%;
+    }
+    .cardRight{
+        width: 100%;
+        height: 200px;
+        justify-content: center;
+    }
+    .cardLeft img{
+        border-radius: 15px 15px 0 0;
+    }
+    .decorationCard1{
+    box-shadow: inset 1.5vw 0 0 #D12635;
+    }
+    .blueDecoration{
+        display: none;
+    }
+
+    .cardRight h1{
+        font-size: 18pt;
+    }
+
+    .cardRight p{
+        font-size: 13pt;
     }
 
     .cardBottom{
