--- a/components/HomeCard2/HomeCard2.css
+++ b/components/HomeCard2/HomeCard2.css
@@ -10,7 +10,7 @@
     box-shadow: -1px 3px 1px 1px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-wrap: wrap;
-
+    position: relative;
 }
 
 
@@ -61,6 +61,8 @@
 }
 
 .cardBottom2{
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 15%;
     border-radius: 0 0 15px 15px;
@@ -84,35 +86,34 @@
     background-color: #D12635;
 }
 
-.cardBottomPhone2{
-    display: none;
-}
-.buletCardUtamaPhone2{
-    display: none;
-}
-
-.buletCardPhone2{
-    display: none;
-}
 
 @media only screen and (max-width:500px){
     .aboutCard2{
         margin-left: 5%;
         width: 90vw;
         height: auto;
-        min-height: 80vh;
         flex-direction: column-reverse;
     }
     .cardLeft2{
         width: 100%;
-        height: 35vh;
+        height: 250px;
         justify-content: flex-start;
+        padding: 0 5%;
+
     }
     .cardRight2{
         width: 100%;
-        height: 40vh;
+        height: 220px;
         justify-content: flex-start;
+        border-radius: 15px 15px 0 0;
+
     }
+
+    .cardRight2 img{
+        border-radius: 15px 15px 0 0;
+
+    }
+
     .blueDecoration2{
         display: none;
     }
@@ -121,50 +122,67 @@
     box-shadow: inset -2.5vw 0 0 #D12635;
         }
 
-    .cardBottom2{
-        display: none;
-    }
 
-    .buletCardUtama2{
-        display: none;
-    }
-
-    .buletCard2{
-        display: none;
-    }
-    .cardBottomPhone2{
-        display: flex;
-        width: 100%;
-        height: 60px;
-        border-radius: 0 0 15px 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 7px;
-    
-    }
-    .buletCardUtamaPhone2{
-        display: flex;
-        width: 30px;
-        height: 10px;
-        border-radius: 90px;
-        background-color: #D12635;
-    }
-    
-    .buletCardPhone2{
-        display: flex;
-        width: 10px;
-        height: 10px;
-        border-radius: 90px;
-        background-color: #D12635;
-    }
 
     .cardLeft2 h1{
         font-size: 16pt;
-        margin-top: 30px;
+        margin-top: 15px;
     }
 
     .cardLeft2 p{
         font-size: 11pt;
+    }
+
+    .buletCard2{
+        width: 8px;
+        height: 8px;
+    }
+
+    .buletCardUtama2{
+        width: 20px;
+        height: 8px;
+    }
+}
+
+@media only screen and (min-width : 501px) and (max-width: 800px){
+    .aboutCard2{
+        margin-left: 10%;
+        height: auto;
+        min-height: 600px;
+        flex-direction: column-reverse;
+    }
+    .cardLeft2{
+        width: 100%;
+        height: 300px;
+        justify-content: flex-start;
+        
+    }
+    .cardRight2{
+        width: 100%;
+        height: 300px;
+        justify-content: flex-start;
+        
+    }
+
+    .cardRight2 img{
+        border-radius: 15px 15px 0 0;
+    }
+
+
+    .decorationCard2{
+    box-shadow: inset -2.5vw 0 0 #D12635;
+    }
+
+    .blueDecoration2{ 
+        display: none;
+    }
+
+    .cardLeft2 h1{
+        font-size: 18pt;
+        margin-top: 30px;
+    }
+
+    .cardLeft2 p{
+        font-size: 12pt;
     }
 }
