--- a/components/HomeServices/HomeServices.css
+++ b/components/HomeServices/HomeServices.css
@@ -101,3 +101,9 @@
     }
 
 }
+
+@media only screen and (min-width : 501px) and (max-width:800px){
+    .decorationBolaService,.decorationBolaService2,.decorationBolaService3{
+        display: none;
+    }
+}
