--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -122,6 +122,7 @@
     .footerKanan{
         height: auto;
         width: auto;
+        justify-content: flex-start;
     }
     .footerTitle{
         font-size: 10pt;
@@ -139,11 +140,6 @@
     margin-left: auto;
 
 }
-
-    .footerKanan{
-        flex-direction: column;
-        justify-content: center;
-    }
 
     .footerProduct h3 , .footerProject h3, .footerServices h3 {
         font-size: 11pt;
@@ -172,4 +168,39 @@
     .contactMeContainer h3{
         font-size: 10pt;
     }
+
+    .footerServices{
+        margin-top: 0;
+        width: auto;
+    }
+    
+    .footerProject{
+        margin-left: 0;
+    }
+    
+}
+
+@media only screen and (min-width : 501px) and (max-width : 800px){
+    .footer{
+        flex-direction: column;
+    }
+
+    .footerKiri{
+        height: 50%;
+        width: 100%;
+    }
+    .footerKanan{
+        height: 50%;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .footerServices{
+        margin-top: 0;
+    }
+    
+    .footerProject{
+        margin-left: 0;
+    }
+    
 }
