update responsive height

--- a/components/HomeCard1/HomeCard1.css
+++ b/components/HomeCard1/HomeCard1.css
@@ -1,7 +1,7 @@
 .aboutCard{
     margin-left: 5vh;
    width: 80vw;
-   height: 65vh;
+   height: 430px;
    background-color: white;
    margin-left: 10%;
    margin-top: 50px;
