--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -188,11 +188,14 @@
     .footerKiri{
         height: 50%;
         width: 100%;
+        padding: 5% 5%;
     }
     .footerKanan{
         height: 50%;
         width: 100%;
         justify-content: space-between;
+        padding: 2% 5%;
+
     }
 
     .footerServices{
