--- a/components/VisiMisi/VisiMisi.css
+++ b/components/VisiMisi/VisiMisi.css
@@ -5,6 +5,33 @@
     background-color: black;
 }
 
+.arrowLeft2{
+    position: absolute;
+    color: white;
+    left: 2%;
+    font-size: 48pt;
+    z-index: 500;
+    top: 40%;
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.arrowRight2{
+    position: absolute;
+    color: white;
+    right: 2%;
+    font-size: 48pt;
+    z-index: 500;
+    top: 40%;
+    cursor: pointer;
+    opacity: 0.5;
+
+}
+
+.arrowLeft2:hover,.arrowRight2:hover{
+    opacity: 1;
+}
+
 .darkEffect{
     width: 100%;
     height: 100%;
@@ -23,8 +50,48 @@
 .darkEffect h1{
     margin-top: -5%;
     margin-bottom: 3%;
+    animation-name: textgone;
+    animation-duration: 2s;
+
 }
 
 .darkEffect h3{
     font-weight: normal;
+
 }
+
+@media only screen and (max-width : 500px){
+    .darkEffect h3{
+        font-size: 11.5pt;
+    }
+
+    .darkEffect{
+        padding: 5%;
+    }
+
+    .arrowLeft2,.arrowRight2{
+        opacity: 1;
+        bottom: 0;
+        top: unset;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
