--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -1,11 +1,18 @@
 
 .footer{
     width: 100vw;
-    height: 50vh;
+    height: auto;
     display: flex;
     color: white;
-    gap: 20px;
-    padding: 10px;
+}
+
+.bluebg{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: rgba(0, 124, 186, 0.75);
+
+
 }
 
 .footerKiri{
@@ -111,9 +118,10 @@
 }
 
 @media only screen and (max-width : 500px){
-    .footer{
+    .bluebg{
         flex-direction: column;
         height: auto;
+        padding: 5% 0;
     }
     .footerKiri{
         height: auto;
@@ -180,8 +188,8 @@
     
 }
 
-@media only screen and (min-width : 501px) and (max-width : 800px){
-    .footer{
+@media only screen and (min-width : 501px) and (max-width : 1025px){
+    .bluebg{
         flex-direction: column;
     }
 
@@ -191,11 +199,10 @@
         padding: 5% 5%;
     }
     .footerKanan{
-        height: 50%;
+        height: auto;
         width: 100%;
         justify-content: space-between;
-        padding: 2% 5%;
-
+        padding: 5% 5%;
     }
 
     .footerServices{
