--- a/components/ContactHeader/ContactHeader.css
+++ b/components/ContactHeader/ContactHeader.css
@@ -40,12 +40,10 @@
 
 @media only screen and (max-width: 500px) {
   .heroTextContact h1{
-      font-size: 18pt;
-      text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.6);
+    font-size: 2.5rem;
+    text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.6);
   }
-  .heroTextContact h3{
-      font-size: 12pt;
-  }
+
   .heroTextContact {
       padding:  0 5%;
   }
@@ -53,14 +51,12 @@
 
 @media only screen and (min-width:501px) and (max-width: 800px){
   .heroTextContact{
-      padding:  0 5%;
+    padding:  0 5%;
 
   }
   .heroTextContact h1{
-      font-size: 28pt;
+    font-size: 3rem;
   }
 
-  .heroTextContact h3{
-      font-size: 14pt;
-  }
+
 }
