--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -1,11 +1,18 @@
 
 .footer{
     width: 100vw;
-    height: 50vh;
+    height: auto;
     display: flex;
     color: white;
-    gap: 20px;
-    padding: 10px;
+}
+
+.bluebg{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: rgba(0, 124, 186, 0.75);
+
+
 }
 
 .footerKiri{
@@ -108,4 +115,102 @@
 .contactMeContainer .fab{
     font-size: 28pt;
     margin-bottom: 9px;
+}
+
+@media only screen and (max-width : 500px){
+    .bluebg{
+        flex-direction: column;
+        height: auto;
+        padding: 5% 0;
+    }
+    .footerKiri{
+        height: auto;
+        width: 100%;
+    }
+    .footerKanan{
+        height: auto;
+        width: auto;
+        justify-content: flex-start;
+    }
+    .footerTitle{
+        font-size: 10pt;
+    }
+    .footerProduct h4, .footerProject h4, .footerServices h4{
+        font-size: 10pt;
+        font-weight: normal;
+        padding: 2px 0;
+    }
+
+.footerProduct,.footerProject{
+    width: 50%;
+}
+.footerProject{
+    margin-left: auto;
+
+}
+
+    .footerProduct h3 , .footerProject h3, .footerServices h3 {
+        font-size: 11pt;
+        margin-bottom: 5px;
+    }
+    
+    .PTpancaFooterText{
+        font-size: 12pt;
+    }
+
+    .textFooter{
+        font-size: 11pt;
+        width: 100%;
+    }
+
+    .contactMeContainer .fas, .contactMeContainer .far {
+        font-size: 18pt;
+        margin-bottom: 15px;
+    } 
+    
+    .contactMeContainer .fab{
+        font-size: 23pt;
+        margin-bottom: 9px;
+    }
+
+    .contactMeContainer h3{
+        font-size: 10pt;
+    }
+
+    .footerServices{
+        margin-top: 0;
+        width: auto;
+    }
+    
+    .footerProject{
+        margin-left: 0;
+    }
+    
+}
+
+@media only screen and (min-width : 501px) and (max-width : 1025px){
+    .bluebg{
+        flex-direction: column;
+    }
+
+    .footerKiri{
+        height: 50%;
+        width: 100%;
+        padding: 5% 5%;
+    }
+    .footerKanan{
+        height: auto;
+        width: 100%;
+        justify-content: space-between;
+        padding: 5% 5%;
+    }
+
+    .footerServices{
+        margin-top: 0;
+    }
+    
+    .footerProject{
+        margin-left: 0;
+    }
+    
 }
