--- a/components/HomeCard1/HomeCard1.css
+++ b/components/HomeCard1/HomeCard1.css
@@ -12,18 +12,18 @@
   flex-wrap: wrap;
 }
 
-.cardLeft {
+.aboutCard .cardLeft {
   width: 55%;
   height: 85%;
   border-radius: 15px 0 15px 0;
   position: relative;
 }
 
-.cardLeft img {
+.aboutCard .cardLeft img {
   border-radius: 15px 0 15px 0;
 }
 
-.decorationCard1 {
+.cardLeft .decorationCard1 {
   width: 100%;
   height: 100%;
   box-shadow: inset 1.5vw 0 0 #d12635;
