--- a/components/HomeCard1/HomeCard1.css
+++ b/components/HomeCard1/HomeCard1.css
@@ -12,18 +12,18 @@
   flex-wrap: wrap;
 }
 
-.aboutCard .cardLeft {
+.cardLeft {
   width: 55%;
   height: 85%;
   border-radius: 15px 0 15px 0;
   position: relative;
 }
 
-.aboutCard .cardLeft img {
+.cardLeft img {
   border-radius: 15px 0 15px 0;
 }
 
-.cardLeft .decorationCard1 {
+.decorationCard1 {
   width: 100%;
   height: 100%;
   box-shadow: inset 1.5vw 0 0 #d12635;
@@ -197,7 +197,7 @@
     box-shadow: inset 1.5vw 0 0 #d12635;
   }
   .blueDecoration {
-    display: flex;
+    display: none;
   }
 
   .cardRight h1 {
