--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -14,21 +14,21 @@
 }
 
 
-.cardLeft{
+.cardLefts{
   width: 100%;
   height: 100%;
   border-radius: 15px 0 15px 0;
   position: relative;
 }
 
-.cardLeft img{
+.cardLefts img{
   border-radius: 15px 0 15px 0;
   width: 100%;
   height: 100%;
   background-position: center;
 }
 
-.cardLeft .decorationCard1{
+.cardLefts .decorationCard1{
   width: 100%;
   height: 99%;
   box-shadow: inset 1.5vw 0 0 #D12635;
@@ -38,7 +38,7 @@
   margin: 0;
 }
 
-.cardRight{
+.cardRights{
   width: 100%;
   height: auto;
   display: flex;
@@ -48,11 +48,11 @@
   gap: 10%;
 }
 
-.cardRight p{
+.cardRights p{
   text-align: justify;
 }
 
-.cardRight h1{
+.cardRights h1{
   font-size: 1.5rem;
   text-align: start;
 
@@ -68,20 +68,21 @@
   }
 
 
-  .cardRight{
+  .cardRights{
     padding: 5%;
   }
 
-  .cardRight h1{
-    font-size: 1.5rem;
+  .cardRights h1{
+    font-size: 14pt;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 10px;
   }
 
-  .cardRight p{
-    font-size: 12pt;
+  .cardRights p{
+    font-size: 11pt;
   }
 
 
