--- a/components/CompanyProfile/companyContainer.jsx/CompanyContainer.css
+++ b/components/CompanyProfile/companyContainer.jsx/CompanyContainer.css
@@ -14,7 +14,6 @@
     width: 70%;
     text-align: justify;
     padding: 0 20px;
-    font-size: 1.5rem;
 }
 
 .companyIsiHeader{
@@ -23,10 +22,12 @@
     text-align: center;
     display: flex;
     text-align: center;
+    font-size: 45pt;
 }
 
 .companyIsi > p {
     margin-top: 50px;
+    font-size: 20pt;
 }
 
 .companyBusiness{
@@ -48,7 +49,11 @@
         width: 90%;
         text-align: justify;
         padding: 0 20px;
-        font-size: 1.5rem;
+        font-size: 20pt;
+    }
+
+    .companyIsiHeader{
+        font-size: 35pt;
     }
 
     .separatorBlack{
